Bug 97051 - Writer crashes on saving document with header or footer after using page style dialog
Summary: Writer crashes on saving document with header or footer after using page styl...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.0.alpha0+ Master
Hardware: All All
: medium critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.0.6 target:5.1.1
Keywords: bibisected, bisected, regression
: 96644 97138 97355 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-01-11 21:22 UTC by Rodrigo Castanheira
Modified: 2016-08-24 16:24 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Printscree, crash error message (8.02 KB, image/jpeg)
2016-01-17 07:39 UTC, raal
Details
crashlog OSX 10.11.2 + LO master 2016-01-14 (1.05 MB, text/plain)
2016-01-19 09:40 UTC, steve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rodrigo Castanheira 2016-01-11 21:22:27 UTC
Writer crashes when document has a header or a footer and you try to edit page style properties. To reproduce:
1) Create a new Writer document.
2) Add a header or footer.
3) Select Format -> Page... then click Cancel. 
4) Close document (you may choose to save it or not).
5) Writer crashes and Libreoffice shows an empty file recovery list.
6) If you close the recovery dialog (without clicking OK), Libreoffice exhibits the fatal error "Unknown SEH Exception".
Tested in Windows 7 and 10, 64-bit.
Comment 1 Usama 2016-01-11 21:43:07 UTC
Confirmed on Libreoffice 15.1.0.1 Ubuntu Gnome 15.04. Report seems very accurate.
In Linux I did not get the "Unknown SEH Exception" when I close the window.
Comment 2 Usama 2016-01-11 21:45:30 UTC
(In reply to Usama Akkad from comment #1)
> Confirmed on Libreoffice 15.1.0.1 Ubuntu Gnome 15.04. Report seems very
> accurate.
> In Linux I did not get the "Unknown SEH Exception" when I close the window.

Sorry, just small correction Libreoffice 5.1.0.1
Comment 3 FutureProject 2016-01-11 22:33:39 UTC
Windows 10 Pro, Version 1511 (OS Build 10586.36)
LibreOffice 5.0.4.2, Build ID 2b9802c1994aa0b7dc6079e128979269cf95bc78
Locale en_US

Can confirm bug, crash is reliably reproduceable although I did not get an "Unknown SEH Exception."

Setting status to NEW and elevating to MEDIUM/CRITICAL since it's a crash.
Comment 4 raal 2016-01-15 10:09:09 UTC
This seems to have begun at the below commit.
Adding Cc: to Zolnai Tamás; Could you possibly take a look at this one? Thanks
 20df21e49e0220ce241858cd154320dda3d03421 is the first bad commit
commit 20df21e49e0220ce241858cd154320dda3d03421
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Tue May 26 19:10:37 2015 -0500

    source f7424ed710e54bb2437a28380b03ed7c26290edc

    source f7424ed710e54bb2437a28380b03ed7c26290edc

:040000 040000 de9190f69bfb00d443e2ab72bba5a1db6230c100 d3552a3bf92402e8d0ccc44f51c3f52699685fae M      instdir

author	Zolnai Tamás <zolnaitamas2000@gmail.com>	2015-03-15 12:29:53 (GMT)
committer	Zolnai Tamás <zolnaitamas2000@gmail.com>	2015-03-16 23:10:01 (GMT)
commit f7424ed710e54bb2437a28380b03ed7c26290edc (patch)
SfxTabDialog: avoid changing const input parameter
Comment 5 Tamás Zolnai 2016-01-15 22:10:23 UTC
It seems the crash is fixed on master:
https://bugs.documentfoundation.org/show_bug.cgi?id=91789#c9

@raal
If you have time for more bibisecting, maybe you should bibisect on master to find out which commit fixes the crash. It would be very helpful in finding out what causes the crash and so fix it on LO 5.0.
Comment 6 raal 2016-01-17 07:39:10 UTC
Created attachment 122016 [details]
Printscree, crash error message

I can still reproduce the crash with Version: 5.2.0.0.alpha0+
Build ID: 0174562fa9e49bf989a571c6ccd51e558109b561
CPU Threads: 1; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-01-16_00:03:18
Comment 7 steve 2016-01-19 09:36:02 UTC
*** Bug 97138 has been marked as a duplicate of this bug. ***
Comment 8 steve 2016-01-19 09:40:36 UTC
Tested https://bugs.documentfoundation.org//show_bug.cgi?id=97138 (which is a dupe).

Steps to reproduce:

- Start writer
- Use the new document
- Menu: Insert Header -> Default Style
- Save document
- Menu: Format -> Page -> Area -> Fill -> Color (any color)
- Close Document -> LO asks for saving -> Save 
>>> CRASH (Document Recovery)

OS X 10.11.2 + LO Version: 5.2.0.0.alpha0+
Build ID: 87be4885d369ba06ab090c26fde23c52656b69a8
CPU Threads: 4; OS Version: -; UI Render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2016-01-14_14:03:38
Locale: de-DE (de.UTF-8)

attaching crash log
setting Hardware OS to ALL since now confirmed on OS X + Linux
Comment 9 steve 2016-01-19 09:40:59 UTC
Created attachment 122075 [details]
crashlog OSX 10.11.2 + LO master 2016-01-14
Comment 10 Peter Maunder 2016-01-19 10:18:41 UTC
Can reproduce on Linux-Mint-Mate 17  32bit

Version: 5.1.0.2
Build ID: ecd3574d51754b043f865cf5bafee286d24db7cc
CPU Threads: 4; OS Version: Linux 3.13; UI Render: default; 
Locale: en-GB (en_GB.UTF-8)
Comment 11 raal 2016-01-25 10:38:43 UTC
*** Bug 97355 has been marked as a duplicate of this bug. ***
Comment 12 Oliver Specht (CIB) 2016-02-02 09:50:48 UTC
The patch f7424ed710e54bb2437a28380b03ed7c26290edc introduced copying the input item set in SfxTabDialog but the SfxStyleDialog still created another copy 

Fix is in https://gerrit.libreoffice.org/#/c/22022/
Comment 13 Commit Notification 2016-02-02 14:44:28 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=869c73d0d2512e483ceedcc895b7cb86e0974ab2

tdf#97051: prevent duplicate copy of SfxItemSet

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Björn Michaelsen 2016-02-03 23:53:10 UTC
Bug 96644 is likely a dupe with the same root cause (bibisected to the same commit).

Also resolving this as fixed per comment 13.
Comment 15 raal 2016-02-04 22:50:26 UTC
*** Bug 96644 has been marked as a duplicate of this bug. ***
Comment 16 Commit Notification 2016-02-07 09:52:40 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=08004a12fa0d7f08cff53b5cf6b6c2409bd47754&h=libreoffice-5-0

tdf#97051: prevent duplicate copy of SfxItemSet

It will be available in 5.0.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2016-02-07 09:58:13 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=58b3c04c3f848003bce08f127b3050e606cc9337&h=libreoffice-5-1

tdf#97051: prevent duplicate copy of SfxItemSet

It will be available in 5.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Harald Koester 2016-08-24 16:24:24 UTC
Checked according of procedure in bug 96644 with versions:
5.0.6: OK
5.1.0: not OK, as expected
5.1.1: OK
5.2.0: OK

Hence Bug closed.