tdf#97051: prevent duplicate copy of SfxItemSet

the patch f7424ed710e54bb2437a28380b03ed7c26290edc introduced copying of
the input item set of SfxTabDialog so now the item set of the style must
not be copied anymore.

Change-Id: If4155ee5999f0c5cd2ac754578a2c1b5ec33b14b
Reviewed-on: https://gerrit.libreoffice.org/22022
Reviewed-by: Oliver Specht <oliver.specht@cib.de>
Tested-by: Oliver Specht <oliver.specht@cib.de>
(cherry picked from commit 869c73d0d2512e483ceedcc895b7cb86e0974ab2)
(cherry picked from commit 08004a12fa0d7f08cff53b5cf6b6c2409bd47754)